// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        £2.35
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button is-primary"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        23
      </span>
       
      expenses
       totalling 
      <span>
        £23,245.36
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button is-primary"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
